--- a/searchGradDatabase.html
+++ b/searchGradDatabase.html
@@ -22,7 +22,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#">Clemson University</a></div>
+      <a class="navbar-brand" href="www.clemson.edu">Clemson University</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav">
@@ -44,7 +44,7 @@
         <div class="form-group"> </div>
 </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Search</a></li>
+        <li><a href="searchGradDatabase.php">Search</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
